[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/action_phase_popup.gd" id="1_popup"]

[node name="ActionPhasePopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_popup")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -230.0
offset_right = 340.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Phase d'action"
horizontal_alignment = 1

[node name="PlayerInfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Joueur | Zone : ..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChoicesContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="DrawCard" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(180, 250)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/DrawCard"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="DrawImage" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/DrawCard/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)
expand_mode = 3
stretch_mode = 5

[node name="DrawLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/DrawCard/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Piocher"
horizontal_alignment = 1

[node name="DrawSubLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/DrawCard/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Deck Hermit"
horizontal_alignment = 1

[node name="DrawButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/DrawCard/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Piocher"

[node name="AttackCard" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(180, 250)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/AttackCard"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="AttackImage" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/AttackCard/VBox"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 120)
expand_mode = 3
stretch_mode = 5

[node name="AttackLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/AttackCard/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Attaquer"
horizontal_alignment = 1

[node name="AttackSubLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/AttackCard/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "2 cible(s)"
horizontal_alignment = 1

[node name="AttackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/AttackCard/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Attaquer"

[node name="EndTurnCard" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(180, 250)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/EndTurnCard"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="EndLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/EndTurnCard/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Fin de tour"
horizontal_alignment = 1

[node name="EndSubLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/EndTurnCard/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Passer au joueur suivant"
horizontal_alignment = 1

[node name="EndButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ChoicesContainer/EndTurnCard/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Fin de tour"
